# gitaction

./: .coverage  main.py  pyproject.toml
src/calculator/: operations.py
src/gitaction.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_operations.py
